--- a/Alexe1kaGitHubSearcher/app/build.gradle
+++ b/Alexe1kaGitHubSearcher/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
