--- a/Alexe1kaGitHubSearcher/app/build.gradle
+++ b/Alexe1kaGitHubSearcher/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
