--- a/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         android:name=".AppSearch">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
