--- a/Alexe1kaGitHubSearcher/app/build.gradle
+++ b/Alexe1kaGitHubSearcher/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
 }
