--- a/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.RepositoryActivity"></activity>
+        <activity android:name=".Activity.RepositoryActivity"
+            android:configChanges="orientation|screenSize"></activity>
     </application>
 
 </manifest>
