--- a/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".AppSearch">
+
         <activity
             android:name=".Activity.MainActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
